# webdev

./: CLAUDE.md  README.md  conf.py  index.rst  lesson_planning.md  links.md  project.md  pyproject.toml
.github/workflows/: build_deploy.yml
chapters/: 01-html.md  02-css.md  03-js.md  api.md  bootstrap.md  dashboard.md  django.md  exercises1.md  image_formats.md
class-code/: solution1.html
class-code/carousel/: carousel.js  style.css
dashboard/: dashboard.py
debugging1/: index.html  style.css
presentation/: index.html
solutions/: solution1.html  style.css
solutions/boats_with_bootstrap/: index.html  style.css
solutions/class-code-270326/carousel/: carousel.html  carousel.js  solution1.html  style.css
solutions/class-code-270326/css/: solution1.html  style.css
solutions/class-code-270326/flex/: index.html  style.css
solutions/css-basics/: solution2.html  style.css
solutions/example_day_03/: boats.html  style.css  test.html
solutions/js-carousel/: carousel.js  solution3.html  style.css
